plugins {
    id 'java'
    id 'org.springframework.boot' version '3.3.5'
    id 'io.spring.dependency-management' version '1.1.6'
}

group = 'com.mdb.rdbms.comparator'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(23)
    }
}

bootRun {
    environment "MONGODB_LOGGING_URI", "mongodb://localhost:27017/rdbms.logs"
}


repositories {
    mavenCentral()
}

dependencies {

    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'com.fasterxml.jackson.core:jackson-databind'
    implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-yaml'
    implementation 'org.postgresql:postgresql'
    implementation 'org.springframework.data:spring-data-mongodb:4.4.0'
    implementation 'org.springframework.data:spring-data-commons:3.4.0'
    implementation 'org.springframework.boot:spring-boot-starter-actuator:3.4.0'
    implementation 'org.mongodb:mongodb-driver-sync:5.2.1'
    implementation 'org.mongodb:mongodb-driver-core:5.2.1'
    implementation 'com.google.code.gson:gson:2.11.0'
    implementation 'org.springframework.boot:spring-boot-starter-web:3.4.0'
    implementation 'org.springframework.boot:spring-boot-starter-validation:3.3.4'
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-api:2.7.0'
    implementation 'com.lmax:disruptor:3.4.4'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

}

tasks.named('test') {
    useJUnitPlatform()
}
